semantic.output
Grammar

    0 $accept: program $end

    1 program: function_list

    2 function_list: function
    3              | function_list function

    4 $@1: %empty

    5 $@2: %empty

    6 function: TYPE ID $@1 LPAREN parameters_full $@2 RPAREN body

    7 $@3: %empty

    8 $@4: %empty

    9 function: VOIDTYPE ID $@3 LPAREN parameters_full $@4 RPAREN body

   10 parameters_full: %empty
   11                | parameters

   12 parameters: parameter
   13           | parameters COMMA parameter

   14 parameter: TYPE ID

   15 body: LCURLYBRACKET variable_list statement_list RCURLYBRACKET

   16 variable_list: %empty
   17              | variable_list variables_def_line

   18 $@5: %empty

   19 variables_def_line: TYPE $@5 variables_only SEMICOLON

   20 variables_only: ID
   21               | variables_only COMMA ID

   22 statement_list: %empty
   23               | statement_list statement

   24 statement: compound_statement
   25          | assignment_statement
   26          | function_call SEMICOLON
   27          | if_statement
   28          | return_statement
   29          | increment_statement
   30          | loop
   31          | switch_statement

   32 $@6: %empty

   33 compound_statement: LCURLYBRACKET $@6 variable_list statement_list RCURLYBRACKET

   34 assignment_statement: ID ASSIGN num_exp SEMICOLON

   35 num_exp: exp
   36        | num_exp AROP exp

   37 exp: literal
   38    | ID increment_optional
   39    | function_call
   40    | LPAREN num_exp RPAREN

   41 literal: INT_NUMBER
   42        | UINT_NUMBER

   43 increment_optional: %empty
   44                   | INCREMENT

   45 $@7: %empty

   46 function_call: ID $@7 LPAREN argument_list RPAREN

   47 argument_list: %empty
   48              | arguments

   49 arguments: num_exp
   50          | arguments COMMA num_exp

   51 if_statement: if_part
   52             | if_part ELSE statement

   53 if_part: IF LPAREN rel_exp RPAREN statement

   54 rel_exp: num_exp RELOP num_exp

   55 return_statement: RETURN num_exp SEMICOLON
   56                 | RETURN SEMICOLON

   57 increment_statement: ID INCREMENT SEMICOLON

   58 loop: loop_first_part loop_second_part

   59 loop_first_part: FOR LPAREN TYPE ID ASSIGN

   60 $@8: %empty

   61 loop_second_part: literal TO literal RPAREN $@8 statement

   62 $@9: %empty

   63 loop_second_part: literal TO literal STEP literal RPAREN $@9 statement

   64 $@10: %empty

   65 switch_statement: SWITCH LSQUAREBRACKET ID $@10 RSQUAREBRACKET LCURLYBRACKET case_list otherwise_optional RCURLYBRACKET

   66 $@11: %empty

   67 case_list: CASETOKEN literal $@11 ARROW statement finish_optional

   68 $@12: %empty

   69 case_list: case_list CASETOKEN literal $@12 ARROW statement finish_optional

   70 finish_optional: %empty
   71                | FINISH SEMICOLON

   72 otherwise_optional: %empty
   73                   | OTHERWISE ARROW statement


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TYPE <i> (258) 6 14 19 59
    IF (259) 53
    ELSE (260) 52
    RETURN (261) 55 56
    ID <s> (262) 6 9 14 20 21 34 38 46 57 59 65
    INT_NUMBER <s> (263) 41
    UINT_NUMBER <s> (264) 42
    LPAREN (265) 6 9 40 46 53 59
    RPAREN (266) 6 9 40 46 53 61 63
    LCURLYBRACKET (267) 15 33 65
    RCURLYBRACKET (268) 15 33 65
    ASSIGN (269) 34 59
    SEMICOLON (270) 19 26 34 55 56 57 71
    AROP <i> (271) 36
    RELOP <i> (272) 54
    VOIDTYPE <i> (273) 9
    COMMA (274) 13 21 50
    INCREMENT (275) 44 57
    FOR (276) 59
    TO (277) 61 63
    STEP (278) 63
    SWITCH (279) 65
    CASETOKEN (280) 67 69
    ARROW (281) 67 69 73
    OTHERWISE (282) 73
    FINISH (283) 71
    LSQUAREBRACKET (284) 65
    RSQUAREBRACKET (285) 65
    ONLY_IF (286)


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    program (33)
        on left: 1
        on right: 0
    function_list (34)
        on left: 2 3
        on right: 1 3
    function (35)
        on left: 6 9
        on right: 2 3
    $@1 (36)
        on left: 4
        on right: 6
    $@2 (37)
        on left: 5
        on right: 6
    $@3 (38)
        on left: 7
        on right: 9
    $@4 (39)
        on left: 8
        on right: 9
    parameters_full (40)
        on left: 10 11
        on right: 6 9
    parameters (41)
        on left: 12 13
        on right: 11 13
    parameter (42)
        on left: 14
        on right: 12 13
    body (43)
        on left: 15
        on right: 6 9
    variable_list (44)
        on left: 16 17
        on right: 15 17 33
    variables_def_line (45)
        on left: 19
        on right: 17
    $@5 (46)
        on left: 18
        on right: 19
    variables_only (47)
        on left: 20 21
        on right: 19 21
    statement_list (48)
        on left: 22 23
        on right: 15 23 33
    statement (49)
        on left: 24 25 26 27 28 29 30 31
        on right: 23 52 53 61 63 67 69 73
    compound_statement (50)
        on left: 33
        on right: 24
    $@6 (51)
        on left: 32
        on right: 33
    assignment_statement (52)
        on left: 34
        on right: 25
    num_exp <i> (53)
        on left: 35 36
        on right: 34 36 40 49 50 54 55
    exp <i> (54)
        on left: 37 38 39 40
        on right: 35 36
    literal <i> (55)
        on left: 41 42
        on right: 37 61 63 67 69
    increment_optional (56)
        on left: 43 44
        on right: 38
    function_call <i> (57)
        on left: 46
        on right: 26 39
    $@7 (58)
        on left: 45
        on right: 46
    argument_list (59)
        on left: 47 48
        on right: 46
    arguments <i> (60)
        on left: 49 50
        on right: 48 50
    if_statement (61)
        on left: 51 52
        on right: 27
    if_part (62)
        on left: 53
        on right: 51 52
    rel_exp <i> (63)
        on left: 54
        on right: 53
    return_statement (64)
        on left: 55 56
        on right: 28
    increment_statement (65)
        on left: 57
        on right: 29
    loop (66)
        on left: 58
        on right: 30
    loop_first_part (67)
        on left: 59
        on right: 58
    loop_second_part (68)
        on left: 61 63
        on right: 58
    $@8 (69)
        on left: 60
        on right: 61
    $@9 (70)
        on left: 62
        on right: 63
    switch_statement (71)
        on left: 65
        on right: 31
    $@10 (72)
        on left: 64
        on right: 65
    case_list (73)
        on left: 67 69
        on right: 65 69
    $@11 (74)
        on left: 66
        on right: 67
    $@12 (75)
        on left: 68
        on right: 69
    finish_optional (76)
        on left: 70 71
        on right: 67 69
    otherwise_optional (77)
        on left: 72 73
        on right: 65


State 0

    0 $accept: . program $end

    TYPE      shift, and go to state 1
    VOIDTYPE  shift, and go to state 2

    program        go to state 3
    function_list  go to state 4
    function       go to state 5


State 1

    6 function: TYPE . ID $@1 LPAREN parameters_full $@2 RPAREN body

    ID  shift, and go to state 6


State 2

    9 function: VOIDTYPE . ID $@3 LPAREN parameters_full $@4 RPAREN body

    ID  shift, and go to state 7


State 3

    0 $accept: program . $end

    $end  shift, and go to state 8


State 4

    1 program: function_list .
    3 function_list: function_list . function

    TYPE      shift, and go to state 1
    VOIDTYPE  shift, and go to state 2

    $default  reduce using rule 1 (program)

    function  go to state 9


State 5

    2 function_list: function .

    $default  reduce using rule 2 (function_list)


State 6

    6 function: TYPE ID . $@1 LPAREN parameters_full $@2 RPAREN body

    $default  reduce using rule 4 ($@1)

    $@1  go to state 10


State 7

    9 function: VOIDTYPE ID . $@3 LPAREN parameters_full $@4 RPAREN body

    $default  reduce using rule 7 ($@3)

    $@3  go to state 11


State 8

    0 $accept: program $end .

    $default  accept


State 9

    3 function_list: function_list function .

    $default  reduce using rule 3 (function_list)


State 10

    6 function: TYPE ID $@1 . LPAREN parameters_full $@2 RPAREN body

    LPAREN  shift, and go to state 12


State 11

    9 function: VOIDTYPE ID $@3 . LPAREN parameters_full $@4 RPAREN body

    LPAREN  shift, and go to state 13


State 12

    6 function: TYPE ID $@1 LPAREN . parameters_full $@2 RPAREN body

    TYPE  shift, and go to state 14

    $default  reduce using rule 10 (parameters_full)

    parameters_full  go to state 15
    parameters       go to state 16
    parameter        go to state 17


State 13

    9 function: VOIDTYPE ID $@3 LPAREN . parameters_full $@4 RPAREN body

    TYPE  shift, and go to state 14

    $default  reduce using rule 10 (parameters_full)

    parameters_full  go to state 18
    parameters       go to state 16
    parameter        go to state 17


State 14

   14 parameter: TYPE . ID

    ID  shift, and go to state 19


State 15

    6 function: TYPE ID $@1 LPAREN parameters_full . $@2 RPAREN body

    $default  reduce using rule 5 ($@2)

    $@2  go to state 20


State 16

   11 parameters_full: parameters .
   13 parameters: parameters . COMMA parameter

    COMMA  shift, and go to state 21

    $default  reduce using rule 11 (parameters_full)


State 17

   12 parameters: parameter .

    $default  reduce using rule 12 (parameters)


State 18

    9 function: VOIDTYPE ID $@3 LPAREN parameters_full . $@4 RPAREN body

    $default  reduce using rule 8 ($@4)

    $@4  go to state 22


State 19

   14 parameter: TYPE ID .

    $default  reduce using rule 14 (parameter)


State 20

    6 function: TYPE ID $@1 LPAREN parameters_full $@2 . RPAREN body

    RPAREN  shift, and go to state 23


State 21

   13 parameters: parameters COMMA . parameter

    TYPE  shift, and go to state 14

    parameter  go to state 24


State 22

    9 function: VOIDTYPE ID $@3 LPAREN parameters_full $@4 . RPAREN body

    RPAREN  shift, and go to state 25


State 23

    6 function: TYPE ID $@1 LPAREN parameters_full $@2 RPAREN . body

    LCURLYBRACKET  shift, and go to state 26

    body  go to state 27


State 24

   13 parameters: parameters COMMA parameter .

    $default  reduce using rule 13 (parameters)


State 25

    9 function: VOIDTYPE ID $@3 LPAREN parameters_full $@4 RPAREN . body

    LCURLYBRACKET  shift, and go to state 26

    body  go to state 28


State 26

   15 body: LCURLYBRACKET . variable_list statement_list RCURLYBRACKET

    $default  reduce using rule 16 (variable_list)

    variable_list  go to state 29


State 27

    6 function: TYPE ID $@1 LPAREN parameters_full $@2 RPAREN body .

    $default  reduce using rule 6 (function)


State 28

    9 function: VOIDTYPE ID $@3 LPAREN parameters_full $@4 RPAREN body .

    $default  reduce using rule 9 (function)


State 29

   15 body: LCURLYBRACKET variable_list . statement_list RCURLYBRACKET
   17 variable_list: variable_list . variables_def_line

    TYPE  shift, and go to state 30

    $default  reduce using rule 22 (statement_list)

    variables_def_line  go to state 31
    statement_list      go to state 32


State 30

   19 variables_def_line: TYPE . $@5 variables_only SEMICOLON

    $default  reduce using rule 18 ($@5)

    $@5  go to state 33


State 31

   17 variable_list: variable_list variables_def_line .

    $default  reduce using rule 17 (variable_list)


State 32

   15 body: LCURLYBRACKET variable_list statement_list . RCURLYBRACKET
   23 statement_list: statement_list . statement

    IF             shift, and go to state 34
    RETURN         shift, and go to state 35
    ID             shift, and go to state 36
    LCURLYBRACKET  shift, and go to state 37
    RCURLYBRACKET  shift, and go to state 38
    FOR            shift, and go to state 39
    SWITCH         shift, and go to state 40

    statement             go to state 41
    compound_statement    go to state 42
    assignment_statement  go to state 43
    function_call         go to state 44
    if_statement          go to state 45
    if_part               go to state 46
    return_statement      go to state 47
    increment_statement   go to state 48
    loop                  go to state 49
    loop_first_part       go to state 50
    switch_statement      go to state 51


State 33

   19 variables_def_line: TYPE $@5 . variables_only SEMICOLON

    ID  shift, and go to state 52

    variables_only  go to state 53


State 34

   53 if_part: IF . LPAREN rel_exp RPAREN statement

    LPAREN  shift, and go to state 54


State 35

   55 return_statement: RETURN . num_exp SEMICOLON
   56                 | RETURN . SEMICOLON

    ID           shift, and go to state 55
    INT_NUMBER   shift, and go to state 56
    UINT_NUMBER  shift, and go to state 57
    LPAREN       shift, and go to state 58
    SEMICOLON    shift, and go to state 59

    num_exp        go to state 60
    exp            go to state 61
    literal        go to state 62
    function_call  go to state 63


State 36

   34 assignment_statement: ID . ASSIGN num_exp SEMICOLON
   46 function_call: ID . $@7 LPAREN argument_list RPAREN
   57 increment_statement: ID . INCREMENT SEMICOLON

    ASSIGN     shift, and go to state 64
    INCREMENT  shift, and go to state 65

    $default  reduce using rule 45 ($@7)

    $@7  go to state 66


State 37

   33 compound_statement: LCURLYBRACKET . $@6 variable_list statement_list RCURLYBRACKET

    $default  reduce using rule 32 ($@6)

    $@6  go to state 67


State 38

   15 body: LCURLYBRACKET variable_list statement_list RCURLYBRACKET .

    $default  reduce using rule 15 (body)


State 39

   59 loop_first_part: FOR . LPAREN TYPE ID ASSIGN

    LPAREN  shift, and go to state 68


State 40

   65 switch_statement: SWITCH . LSQUAREBRACKET ID $@10 RSQUAREBRACKET LCURLYBRACKET case_list otherwise_optional RCURLYBRACKET

    LSQUAREBRACKET  shift, and go to state 69


State 41

   23 statement_list: statement_list statement .

    $default  reduce using rule 23 (statement_list)


State 42

   24 statement: compound_statement .

    $default  reduce using rule 24 (statement)


State 43

   25 statement: assignment_statement .

    $default  reduce using rule 25 (statement)


State 44

   26 statement: function_call . SEMICOLON

    SEMICOLON  shift, and go to state 70


State 45

   27 statement: if_statement .

    $default  reduce using rule 27 (statement)


State 46

   51 if_statement: if_part .
   52             | if_part . ELSE statement

    ELSE  shift, and go to state 71

    $default  reduce using rule 51 (if_statement)


State 47

   28 statement: return_statement .

    $default  reduce using rule 28 (statement)


State 48

   29 statement: increment_statement .

    $default  reduce using rule 29 (statement)


State 49

   30 statement: loop .

    $default  reduce using rule 30 (statement)


State 50

   58 loop: loop_first_part . loop_second_part

    INT_NUMBER   shift, and go to state 56
    UINT_NUMBER  shift, and go to state 57

    literal           go to state 72
    loop_second_part  go to state 73


State 51

   31 statement: switch_statement .

    $default  reduce using rule 31 (statement)


State 52

   20 variables_only: ID .

    $default  reduce using rule 20 (variables_only)


State 53

   19 variables_def_line: TYPE $@5 variables_only . SEMICOLON
   21 variables_only: variables_only . COMMA ID

    SEMICOLON  shift, and go to state 74
    COMMA      shift, and go to state 75


State 54

   53 if_part: IF LPAREN . rel_exp RPAREN statement

    ID           shift, and go to state 55
    INT_NUMBER   shift, and go to state 56
    UINT_NUMBER  shift, and go to state 57
    LPAREN       shift, and go to state 58

    num_exp        go to state 76
    exp            go to state 61
    literal        go to state 62
    function_call  go to state 63
    rel_exp        go to state 77


State 55

   38 exp: ID . increment_optional
   46 function_call: ID . $@7 LPAREN argument_list RPAREN

    INCREMENT  shift, and go to state 78

    LPAREN    reduce using rule 45 ($@7)
    $default  reduce using rule 43 (increment_optional)

    increment_optional  go to state 79
    $@7                 go to state 66


State 56

   41 literal: INT_NUMBER .

    $default  reduce using rule 41 (literal)


State 57

   42 literal: UINT_NUMBER .

    $default  reduce using rule 42 (literal)


State 58

   40 exp: LPAREN . num_exp RPAREN

    ID           shift, and go to state 55
    INT_NUMBER   shift, and go to state 56
    UINT_NUMBER  shift, and go to state 57
    LPAREN       shift, and go to state 58

    num_exp        go to state 80
    exp            go to state 61
    literal        go to state 62
    function_call  go to state 63


State 59

   56 return_statement: RETURN SEMICOLON .

    $default  reduce using rule 56 (return_statement)


State 60

   36 num_exp: num_exp . AROP exp
   55 return_statement: RETURN num_exp . SEMICOLON

    SEMICOLON  shift, and go to state 81
    AROP       shift, and go to state 82


State 61

   35 num_exp: exp .

    $default  reduce using rule 35 (num_exp)


State 62

   37 exp: literal .

    $default  reduce using rule 37 (exp)


State 63

   39 exp: function_call .

    $default  reduce using rule 39 (exp)


State 64

   34 assignment_statement: ID ASSIGN . num_exp SEMICOLON

    ID           shift, and go to state 55
    INT_NUMBER   shift, and go to state 56
    UINT_NUMBER  shift, and go to state 57
    LPAREN       shift, and go to state 58

    num_exp        go to state 83
    exp            go to state 61
    literal        go to state 62
    function_call  go to state 63


State 65

   57 increment_statement: ID INCREMENT . SEMICOLON

    SEMICOLON  shift, and go to state 84


State 66

   46 function_call: ID $@7 . LPAREN argument_list RPAREN

    LPAREN  shift, and go to state 85


State 67

   33 compound_statement: LCURLYBRACKET $@6 . variable_list statement_list RCURLYBRACKET

    $default  reduce using rule 16 (variable_list)

    variable_list  go to state 86


State 68

   59 loop_first_part: FOR LPAREN . TYPE ID ASSIGN

    TYPE  shift, and go to state 87


State 69

   65 switch_statement: SWITCH LSQUAREBRACKET . ID $@10 RSQUAREBRACKET LCURLYBRACKET case_list otherwise_optional RCURLYBRACKET

    ID  shift, and go to state 88


State 70

   26 statement: function_call SEMICOLON .

    $default  reduce using rule 26 (statement)


State 71

   52 if_statement: if_part ELSE . statement

    IF             shift, and go to state 34
    RETURN         shift, and go to state 35
    ID             shift, and go to state 36
    LCURLYBRACKET  shift, and go to state 37
    FOR            shift, and go to state 39
    SWITCH         shift, and go to state 40

    statement             go to state 89
    compound_statement    go to state 42
    assignment_statement  go to state 43
    function_call         go to state 44
    if_statement          go to state 45
    if_part               go to state 46
    return_statement      go to state 47
    increment_statement   go to state 48
    loop                  go to state 49
    loop_first_part       go to state 50
    switch_statement      go to state 51


State 72

   61 loop_second_part: literal . TO literal RPAREN $@8 statement
   63                 | literal . TO literal STEP literal RPAREN $@9 statement

    TO  shift, and go to state 90


State 73

   58 loop: loop_first_part loop_second_part .

    $default  reduce using rule 58 (loop)


State 74

   19 variables_def_line: TYPE $@5 variables_only SEMICOLON .

    $default  reduce using rule 19 (variables_def_line)


State 75

   21 variables_only: variables_only COMMA . ID

    ID  shift, and go to state 91


State 76

   36 num_exp: num_exp . AROP exp
   54 rel_exp: num_exp . RELOP num_exp

    AROP   shift, and go to state 82
    RELOP  shift, and go to state 92


State 77

   53 if_part: IF LPAREN rel_exp . RPAREN statement

    RPAREN  shift, and go to state 93


State 78

   44 increment_optional: INCREMENT .

    $default  reduce using rule 44 (increment_optional)


State 79

   38 exp: ID increment_optional .

    $default  reduce using rule 38 (exp)


State 80

   36 num_exp: num_exp . AROP exp
   40 exp: LPAREN num_exp . RPAREN

    RPAREN  shift, and go to state 94
    AROP    shift, and go to state 82


State 81

   55 return_statement: RETURN num_exp SEMICOLON .

    $default  reduce using rule 55 (return_statement)


State 82

   36 num_exp: num_exp AROP . exp

    ID           shift, and go to state 55
    INT_NUMBER   shift, and go to state 56
    UINT_NUMBER  shift, and go to state 57
    LPAREN       shift, and go to state 58

    exp            go to state 95
    literal        go to state 62
    function_call  go to state 63


State 83

   34 assignment_statement: ID ASSIGN num_exp . SEMICOLON
   36 num_exp: num_exp . AROP exp

    SEMICOLON  shift, and go to state 96
    AROP       shift, and go to state 82


State 84

   57 increment_statement: ID INCREMENT SEMICOLON .

    $default  reduce using rule 57 (increment_statement)


State 85

   46 function_call: ID $@7 LPAREN . argument_list RPAREN

    ID           shift, and go to state 55
    INT_NUMBER   shift, and go to state 56
    UINT_NUMBER  shift, and go to state 57
    LPAREN       shift, and go to state 58

    $default  reduce using rule 47 (argument_list)

    num_exp        go to state 97
    exp            go to state 61
    literal        go to state 62
    function_call  go to state 63
    argument_list  go to state 98
    arguments      go to state 99


State 86

   17 variable_list: variable_list . variables_def_line
   33 compound_statement: LCURLYBRACKET $@6 variable_list . statement_list RCURLYBRACKET

    TYPE  shift, and go to state 30

    $default  reduce using rule 22 (statement_list)

    variables_def_line  go to state 31
    statement_list      go to state 100


State 87

   59 loop_first_part: FOR LPAREN TYPE . ID ASSIGN

    ID  shift, and go to state 101


State 88

   65 switch_statement: SWITCH LSQUAREBRACKET ID . $@10 RSQUAREBRACKET LCURLYBRACKET case_list otherwise_optional RCURLYBRACKET

    $default  reduce using rule 64 ($@10)

    $@10  go to state 102


State 89

   52 if_statement: if_part ELSE statement .

    $default  reduce using rule 52 (if_statement)


State 90

   61 loop_second_part: literal TO . literal RPAREN $@8 statement
   63                 | literal TO . literal STEP literal RPAREN $@9 statement

    INT_NUMBER   shift, and go to state 56
    UINT_NUMBER  shift, and go to state 57

    literal  go to state 103


State 91

   21 variables_only: variables_only COMMA ID .

    $default  reduce using rule 21 (variables_only)


State 92

   54 rel_exp: num_exp RELOP . num_exp

    ID           shift, and go to state 55
    INT_NUMBER   shift, and go to state 56
    UINT_NUMBER  shift, and go to state 57
    LPAREN       shift, and go to state 58

    num_exp        go to state 104
    exp            go to state 61
    literal        go to state 62
    function_call  go to state 63


State 93

   53 if_part: IF LPAREN rel_exp RPAREN . statement

    IF             shift, and go to state 34
    RETURN         shift, and go to state 35
    ID             shift, and go to state 36
    LCURLYBRACKET  shift, and go to state 37
    FOR            shift, and go to state 39
    SWITCH         shift, and go to state 40

    statement             go to state 105
    compound_statement    go to state 42
    assignment_statement  go to state 43
    function_call         go to state 44
    if_statement          go to state 45
    if_part               go to state 46
    return_statement      go to state 47
    increment_statement   go to state 48
    loop                  go to state 49
    loop_first_part       go to state 50
    switch_statement      go to state 51


State 94

   40 exp: LPAREN num_exp RPAREN .

    $default  reduce using rule 40 (exp)


State 95

   36 num_exp: num_exp AROP exp .

    $default  reduce using rule 36 (num_exp)


State 96

   34 assignment_statement: ID ASSIGN num_exp SEMICOLON .

    $default  reduce using rule 34 (assignment_statement)


State 97

   36 num_exp: num_exp . AROP exp
   49 arguments: num_exp .

    AROP  shift, and go to state 82

    $default  reduce using rule 49 (arguments)


State 98

   46 function_call: ID $@7 LPAREN argument_list . RPAREN

    RPAREN  shift, and go to state 106


State 99

   48 argument_list: arguments .
   50 arguments: arguments . COMMA num_exp

    COMMA  shift, and go to state 107

    $default  reduce using rule 48 (argument_list)


State 100

   23 statement_list: statement_list . statement
   33 compound_statement: LCURLYBRACKET $@6 variable_list statement_list . RCURLYBRACKET

    IF             shift, and go to state 34
    RETURN         shift, and go to state 35
    ID             shift, and go to state 36
    LCURLYBRACKET  shift, and go to state 37
    RCURLYBRACKET  shift, and go to state 108
    FOR            shift, and go to state 39
    SWITCH         shift, and go to state 40

    statement             go to state 41
    compound_statement    go to state 42
    assignment_statement  go to state 43
    function_call         go to state 44
    if_statement          go to state 45
    if_part               go to state 46
    return_statement      go to state 47
    increment_statement   go to state 48
    loop                  go to state 49
    loop_first_part       go to state 50
    switch_statement      go to state 51


State 101

   59 loop_first_part: FOR LPAREN TYPE ID . ASSIGN

    ASSIGN  shift, and go to state 109


State 102

   65 switch_statement: SWITCH LSQUAREBRACKET ID $@10 . RSQUAREBRACKET LCURLYBRACKET case_list otherwise_optional RCURLYBRACKET

    RSQUAREBRACKET  shift, and go to state 110


State 103

   61 loop_second_part: literal TO literal . RPAREN $@8 statement
   63                 | literal TO literal . STEP literal RPAREN $@9 statement

    RPAREN  shift, and go to state 111
    STEP    shift, and go to state 112


State 104

   36 num_exp: num_exp . AROP exp
   54 rel_exp: num_exp RELOP num_exp .

    AROP  shift, and go to state 82

    $default  reduce using rule 54 (rel_exp)


State 105

   53 if_part: IF LPAREN rel_exp RPAREN statement .

    $default  reduce using rule 53 (if_part)


State 106

   46 function_call: ID $@7 LPAREN argument_list RPAREN .

    $default  reduce using rule 46 (function_call)


State 107

   50 arguments: arguments COMMA . num_exp

    ID           shift, and go to state 55
    INT_NUMBER   shift, and go to state 56
    UINT_NUMBER  shift, and go to state 57
    LPAREN       shift, and go to state 58

    num_exp        go to state 113
    exp            go to state 61
    literal        go to state 62
    function_call  go to state 63


State 108

   33 compound_statement: LCURLYBRACKET $@6 variable_list statement_list RCURLYBRACKET .

    $default  reduce using rule 33 (compound_statement)


State 109

   59 loop_first_part: FOR LPAREN TYPE ID ASSIGN .

    $default  reduce using rule 59 (loop_first_part)


State 110

   65 switch_statement: SWITCH LSQUAREBRACKET ID $@10 RSQUAREBRACKET . LCURLYBRACKET case_list otherwise_optional RCURLYBRACKET

    LCURLYBRACKET  shift, and go to state 114


State 111

   61 loop_second_part: literal TO literal RPAREN . $@8 statement

    $default  reduce using rule 60 ($@8)

    $@8  go to state 115


State 112

   63 loop_second_part: literal TO literal STEP . literal RPAREN $@9 statement

    INT_NUMBER   shift, and go to state 56
    UINT_NUMBER  shift, and go to state 57

    literal  go to state 116


State 113

   36 num_exp: num_exp . AROP exp
   50 arguments: arguments COMMA num_exp .

    AROP  shift, and go to state 82

    $default  reduce using rule 50 (arguments)


State 114

   65 switch_statement: SWITCH LSQUAREBRACKET ID $@10 RSQUAREBRACKET LCURLYBRACKET . case_list otherwise_optional RCURLYBRACKET

    CASETOKEN  shift, and go to state 117

    case_list  go to state 118


State 115

   61 loop_second_part: literal TO literal RPAREN $@8 . statement

    IF             shift, and go to state 34
    RETURN         shift, and go to state 35
    ID             shift, and go to state 36
    LCURLYBRACKET  shift, and go to state 37
    FOR            shift, and go to state 39
    SWITCH         shift, and go to state 40

    statement             go to state 119
    compound_statement    go to state 42
    assignment_statement  go to state 43
    function_call         go to state 44
    if_statement          go to state 45
    if_part               go to state 46
    return_statement      go to state 47
    increment_statement   go to state 48
    loop                  go to state 49
    loop_first_part       go to state 50
    switch_statement      go to state 51


State 116

   63 loop_second_part: literal TO literal STEP literal . RPAREN $@9 statement

    RPAREN  shift, and go to state 120


State 117

   67 case_list: CASETOKEN . literal $@11 ARROW statement finish_optional

    INT_NUMBER   shift, and go to state 56
    UINT_NUMBER  shift, and go to state 57

    literal  go to state 121


State 118

   65 switch_statement: SWITCH LSQUAREBRACKET ID $@10 RSQUAREBRACKET LCURLYBRACKET case_list . otherwise_optional RCURLYBRACKET
   69 case_list: case_list . CASETOKEN literal $@12 ARROW statement finish_optional

    CASETOKEN  shift, and go to state 122
    OTHERWISE  shift, and go to state 123

    $default  reduce using rule 72 (otherwise_optional)

    otherwise_optional  go to state 124


State 119

   61 loop_second_part: literal TO literal RPAREN $@8 statement .

    $default  reduce using rule 61 (loop_second_part)


State 120

   63 loop_second_part: literal TO literal STEP literal RPAREN . $@9 statement

    $default  reduce using rule 62 ($@9)

    $@9  go to state 125


State 121

   67 case_list: CASETOKEN literal . $@11 ARROW statement finish_optional

    $default  reduce using rule 66 ($@11)

    $@11  go to state 126


State 122

   69 case_list: case_list CASETOKEN . literal $@12 ARROW statement finish_optional

    INT_NUMBER   shift, and go to state 56
    UINT_NUMBER  shift, and go to state 57

    literal  go to state 127


State 123

   73 otherwise_optional: OTHERWISE . ARROW statement

    ARROW  shift, and go to state 128


State 124

   65 switch_statement: SWITCH LSQUAREBRACKET ID $@10 RSQUAREBRACKET LCURLYBRACKET case_list otherwise_optional . RCURLYBRACKET

    RCURLYBRACKET  shift, and go to state 129


State 125

   63 loop_second_part: literal TO literal STEP literal RPAREN $@9 . statement

    IF             shift, and go to state 34
    RETURN         shift, and go to state 35
    ID             shift, and go to state 36
    LCURLYBRACKET  shift, and go to state 37
    FOR            shift, and go to state 39
    SWITCH         shift, and go to state 40

    statement             go to state 130
    compound_statement    go to state 42
    assignment_statement  go to state 43
    function_call         go to state 44
    if_statement          go to state 45
    if_part               go to state 46
    return_statement      go to state 47
    increment_statement   go to state 48
    loop                  go to state 49
    loop_first_part       go to state 50
    switch_statement      go to state 51


State 126

   67 case_list: CASETOKEN literal $@11 . ARROW statement finish_optional

    ARROW  shift, and go to state 131


State 127

   69 case_list: case_list CASETOKEN literal . $@12 ARROW statement finish_optional

    $default  reduce using rule 68 ($@12)

    $@12  go to state 132


State 128

   73 otherwise_optional: OTHERWISE ARROW . statement

    IF             shift, and go to state 34
    RETURN         shift, and go to state 35
    ID             shift, and go to state 36
    LCURLYBRACKET  shift, and go to state 37
    FOR            shift, and go to state 39
    SWITCH         shift, and go to state 40

    statement             go to state 133
    compound_statement    go to state 42
    assignment_statement  go to state 43
    function_call         go to state 44
    if_statement          go to state 45
    if_part               go to state 46
    return_statement      go to state 47
    increment_statement   go to state 48
    loop                  go to state 49
    loop_first_part       go to state 50
    switch_statement      go to state 51


State 129

   65 switch_statement: SWITCH LSQUAREBRACKET ID $@10 RSQUAREBRACKET LCURLYBRACKET case_list otherwise_optional RCURLYBRACKET .

    $default  reduce using rule 65 (switch_statement)


State 130

   63 loop_second_part: literal TO literal STEP literal RPAREN $@9 statement .

    $default  reduce using rule 63 (loop_second_part)


State 131

   67 case_list: CASETOKEN literal $@11 ARROW . statement finish_optional

    IF             shift, and go to state 34
    RETURN         shift, and go to state 35
    ID             shift, and go to state 36
    LCURLYBRACKET  shift, and go to state 37
    FOR            shift, and go to state 39
    SWITCH         shift, and go to state 40

    statement             go to state 134
    compound_statement    go to state 42
    assignment_statement  go to state 43
    function_call         go to state 44
    if_statement          go to state 45
    if_part               go to state 46
    return_statement      go to state 47
    increment_statement   go to state 48
    loop                  go to state 49
    loop_first_part       go to state 50
    switch_statement      go to state 51


State 132

   69 case_list: case_list CASETOKEN literal $@12 . ARROW statement finish_optional

    ARROW  shift, and go to state 135


State 133

   73 otherwise_optional: OTHERWISE ARROW statement .

    $default  reduce using rule 73 (otherwise_optional)


State 134

   67 case_list: CASETOKEN literal $@11 ARROW statement . finish_optional

    FINISH  shift, and go to state 136

    $default  reduce using rule 70 (finish_optional)

    finish_optional  go to state 137


State 135

   69 case_list: case_list CASETOKEN literal $@12 ARROW . statement finish_optional

    IF             shift, and go to state 34
    RETURN         shift, and go to state 35
    ID             shift, and go to state 36
    LCURLYBRACKET  shift, and go to state 37
    FOR            shift, and go to state 39
    SWITCH         shift, and go to state 40

    statement             go to state 138
    compound_statement    go to state 42
    assignment_statement  go to state 43
    function_call         go to state 44
    if_statement          go to state 45
    if_part               go to state 46
    return_statement      go to state 47
    increment_statement   go to state 48
    loop                  go to state 49
    loop_first_part       go to state 50
    switch_statement      go to state 51


State 136

   71 finish_optional: FINISH . SEMICOLON

    SEMICOLON  shift, and go to state 139


State 137

   67 case_list: CASETOKEN literal $@11 ARROW statement finish_optional .

    $default  reduce using rule 67 (case_list)


State 138

   69 case_list: case_list CASETOKEN literal $@12 ARROW statement . finish_optional

    FINISH  shift, and go to state 136

    $default  reduce using rule 70 (finish_optional)

    finish_optional  go to state 140


State 139

   71 finish_optional: FINISH SEMICOLON .

    $default  reduce using rule 71 (finish_optional)


State 140

   69 case_list: case_list CASETOKEN literal $@12 ARROW statement finish_optional .

    $default  reduce using rule 69 (case_list)
